Address review comments, remove extra db calls, remove logging